# simpler

./: .gitignore  DESIGN.md  PLAN.md  README.md  SPEC.md  build-book.sh  build.sh
bootstrap/: Cargo.toml  run-tests.sh
bootstrap/examples/: hello.smplr  m2.smplr  m3.smplr  m3b.smplr  m3c.smplr  m5a.smplr  m5b.smplr  m5c.smplr  m5d.smplr  m5e.smplr  m5f.smplr  m6.smplr  report.txt  tests.smplr
bootstrap/src/: main.rs
selfhost/: average.smplr  build.sh  calc.smplr  lexer.smplr  linenum.smplr  numstats.smplr  orbit.smplr  sample.smplr  simpler.c  simpler.smplr  slug.smplr  sortlines.smplr  sumcol.smplr  wordfreq.smplr
